Add job titles for testimonilas

--- a/testimonials.html
+++ b/testimonials.html
@@ -183,7 +183,7 @@
                     Natalia McHale
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
-                    President and CEO of pure performance
+                    E-Commerce Consultant 
                 </h3>
             </div>
             <div class="testimonial-exert">
@@ -206,7 +206,7 @@
                     Kate Towes
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
-                    Customer experoence Team lead
+                    Customer Experience Team Lead
                 </h3>
             </div>
             <div class="testimonial-exert">
@@ -227,7 +227,7 @@
                     Jo Christie
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
-                    Head of digital at Coconuts
+                    Travel Retail Manager U.K. and Ireland 
                 </h3>
             </div>
             <div class="testimonial-exert">
@@ -248,7 +248,7 @@
                     Darren Searle
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
-                    Founder and head chef at Montana's Cookhouse
+                    Store Manager 
                 </h3>
             </div>
             <div class="testimonial-exert">
@@ -269,7 +269,7 @@
                     Katya Vanbrich
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
-                    Founder and head chef at Montana's Cookhouse
+                    Content and Experience Specialist 
                 </h3>
             </div>
             <div class="testimonial-exert">
