Fix missing contact hero
Left align form fields

--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                 Contact
             </h2>
             <h3 class="contact-form-subtitle normal-text">
-                Fill out the form below or email us @  info@mhairilifecoach.com
+                Fill out the form below or email us at info@mhairilifecoach.com
             </h3>
             <div class="contact-form">
                 <form name="Contact" action="" method="POST" data-netlify="true" encType="multipart/form-data">
