Remove unused images

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="coaching-text">
                 <h2 class="coaching-title">Why?</h2>
                 <p class="normal-text p-md-0">  
-                    I’m here to make a fundamental difference in the life you led.  You need to know if that can really happen.  Read feedback from some of my wonderful clients and find out how you too can live the life you love.
+                    I’m here to make a fundamental difference in the life you lead.  You need to know if that can really happen.  Read feedback from some of my wonderful clients and find out how you too can live the life you love.
                     </p>
                 </p>
                 <div class="coach-cta-btn">
@@ -393,8 +393,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!-- rellax.js -->
-    <!-- <script src="static/js/rellax.min.js"></script> -->
     <!--  script -->
     <script src="static/js/main.js"></script>
 </body>
