--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <div class="header-logo d-none d-md-block">
             <a class="header-link" href="index.html">
                 <h1 class="logo-1 mb-1">Mhairi Todd</h1>
-                <h2 class="logo-subtitle mb-0">Tranformation Coach</h2>
+                <h2 class="logo-subtitle mb-0">Revolve Coaching</h2>
             </a>
         </div>
         <div class="toggle-header">
@@ -65,7 +65,7 @@
         <div class="header-xs-logo">
             <a class="header-link" href="index.html">
                 <h1 class="logo-1 mb-1">Mhairi Todd</h1>
-                <h2 class="logo-subtitle mb-0">Life Transformation Coach</h2>
+                <h2 class="logo-subtitle mb-0">Revolve Coaching</h2>
             </a>
         </div>
     </div>
