Fix includes list item new line

--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,15 @@
                 <li class="nav-item rob-font"><a href="testimonials.html">Testimonials</a></li>
                 <li class="nav-item rob-font"><a href="#">Contact</a></li>
                 <li class="nav-item social-nav">
-                    <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
                     <span class="social-nav-item">
                         <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
                             <i class="fab fa-instagram"></a></i>
                     </span>
-                    <span class="social-nav-item"><i class="fab fa-pinterest"></i></span>
-                    <span class="social-nav-item"><i class="fab fa-linkedin"></i></span>
+                    <span class="social-nav-item">
+                        <a href="https://www.linkedin.com/in/mhairi-todd-49515789/" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </span>
                 </li>
             </ul>
         </nav>
@@ -97,7 +99,7 @@
                 Contact
             </h2>
             <h3 class="contact-form-subtitle normal-text">
-                Fill out the form below or email us at info@mhairilifecoach.com
+                Fill out the form below or email us at info@revolvecoaching.co.uk
             </h3>
             <div class="contact-form">
                 <form name="Contact" action="" method="POST" data-netlify="true" encType="multipart/form-data">
@@ -143,28 +145,31 @@
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">how did you get started as a life coach?</h3>
                 <p class="normal-text">
-                    Looking back now I can see that a personal disaster was absolutely the trigger point for me radically changing my life for the better (read the full story here). I knew I wanted to serve people like me and I wanted to do it in the most brilliant way possible….so I did a diploma in life coaching with the Coaching Academy.
+                    Looking back now I can see that a personal disaster was absolutely the trigger point for me radically changing my life for the better. I knew I wanted to serve people like me and I wanted to do it in the most positive way possible….so I did a diploma in life coaching with the Coaching Academy.
                 </p>
             </div>
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">The difference between your main 3 offerings?</h3>
                 <p class="normal-text">
-                    How difficult do you find the challenges you are bringing to transformation coaching? The main differences are length of program, frequency of sessions and depth of discovery therefore change. 
-                    Swift = short, frequent and broad. 
-                    Signature = medium, every 2-3 weeks and extensive. 
-                    Shift = Long, every 2-3 weeks and total.
+                    The main differences are length of program, frequency of sessions and depth of discovery therefore change. 
+                    <br>
+                    <span class="fw-b">Swift:</span> short, frequent and broad. 
+                    <br>
+                    <span class="fw-b">Signature:</span> medium, every 2 weeks and extensive. 
+                    <br>
+                    <span class="fw-b">Shift:</span> Long, every 3 weeks and total.
                 </p>
             </div>
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">WOULD YOU TELL ME IF COACHING WASN’T RIGHT FOR ME?</h3>
                 <p class="normal-text">
-                    Absolutely! I make it a priority to only take on clients for whom coaching is right for and I am a good fit for.  That's why the initial Clarity call is so important.  Its free, no obligation and within that we explore your needs and our chemistry.
+                    Of cuorse. I make it a priority to only take on clients for whom coaching is right and I am a good fit for.  That's why the initial Clarity call is so important. Its free, no obligation and within that we explore your needs and our chemistry.
                 </p>
             </div> 
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">DO YOU OFFER ANY DISCOUNTS?</h3>
                 <p class="normal-text">
-                    Yes!  I absolutely love the clients I sign up to my program, as such I offer a 10% refer a dream boat discount.  If you are a current client and you refer a friend who signs up then you BOTH receive a 10% discount on your programs. 
+                    Yes! I absolutely love the clients I sign up to my program, as such I offer a 10% refer a dream boat discount. If you are a current client and you refer a friend who signs up then you BOTH receive a 10% discount on your programs. 
                 </p>
             </div> 
             <div class="faq-item">
