--- a/testimonials.html
+++ b/testimonials.html
@@ -42,13 +42,15 @@
                 <li class="nav-item rob-font"><a href="testimonials.html">Testimonials</a></li>
                 <li class="nav-item rob-font"><a href="contact.html">Contact</a></li>
                 <li class="nav-item social-nav">
-                    <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
                     <span class="social-nav-item">
                         <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
                             <i class="fab fa-instagram"></a></i>
                     </span>
-                    <span class="social-nav-item"><i class="fab fa-pinterest"></i></span>
-                    <span class="social-nav-item"><i class="fab fa-linkedin"></i></span>
+                    <span class="social-nav-item">
+                        <a href="https://www.linkedin.com/in/mhairi-todd-49515789/" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </span>
                 </li>
             </ul>
         </nav>
@@ -116,10 +118,10 @@
             <div class="gain-item">
                 <div class="gain-item-content">
                     <h2 class="sect-subtitle">
-                        RELEASE 
+                        SELF FOCUS  
                     </h2>
                     <p class="normal-text">
-                        The ability to let go of limiting beliefs and negative patterns 
+                        Tools to live authentically and move forward with focus  
                     </p>
                 </div>
             </div>
@@ -127,10 +129,10 @@
             <div class="gain-item">
                 <div class="gain-item-content">
                     <h2 class="sect-subtitle">
-                        SELF FOCUS 
+                        RELEASE
                     </h2>
                     <p class="normal-text">
-                        Tools to live authentically and move forward with focus 
+                        The ability to let go of limiting beliefs and negative patterns
                     </p>
                 </div>
             </div>
@@ -203,7 +205,7 @@
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
-                    Kate Towes
+                    Kate Towse
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
                     Customer Experience Team Lead
@@ -266,7 +268,7 @@
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
-                    Katya Vanbrich
+                    Katya Van Brick
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
                     Content and Experience Specialist 
