--- a/about.html
+++ b/about.html
@@ -42,13 +42,15 @@
                 <li class="nav-item rob-font"><a href="testimonials.html">Testimonials</a></li>
                 <li class="nav-item rob-font"><a href="contact.html">Contact</a></li>
                 <li class="nav-item social-nav">
-                    <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
                     <span class="social-nav-item">
                         <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
                             <i class="fab fa-instagram"></a></i>
                     </span>
-                    <span class="social-nav-item"><i class="fab fa-pinterest"></i></span>
-                    <span class="social-nav-item"><i class="fab fa-linkedin"></i></span>
+                    <span class="social-nav-item">
+                        <a href="https://www.linkedin.com/in/mhairi-todd-49515789/" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </span>
                 </li>
             </ul>
         </nav>
