--- a/services.html
+++ b/services.html
@@ -42,13 +42,15 @@
                 <li class="nav-item rob-font"><a href="testimonials.html">Testimonials</a></li>
                 <li class="nav-item rob-font"><a href="contact.html">Contact</a></li>
                 <li class="nav-item social-nav">
-                    <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
                     <span class="social-nav-item">
                         <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
                             <i class="fab fa-instagram"></a></i>
                     </span>
-                    <span class="social-nav-item"><i class="fab fa-pinterest"></i></span>
-                    <span class="social-nav-item"><i class="fab fa-linkedin"></i></span>
+                    <span class="social-nav-item">
+                        <a href="https://www.linkedin.com/in/mhairi-todd-49515789/" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </span>
                 </li>
             </ul>
         </nav>
@@ -96,7 +98,7 @@
     <!-- intro section -->
     <section class="services-intro">
         <h2 class="about-detail-title sect-title intro-title">
-            Aside from “how do I pronounce your name?... the SECOND most common question I am asked by clients is..
+            Aside from “how do I pronounce your name?... the SECOND most common question I am asked is..
         </h2>
         <h3 class="services-intro-subtitle rob-font">
             What actually is transformation coaching?
@@ -277,7 +279,8 @@
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Email contact in between (3 * per week)
+                                <span>Email contact in between (3 * per week)</span>
+                                
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
