--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="mhairi-life-coach-walking-towards">
         </div>
         <div class="home-hero-text">
-            <p class="animate__animated animate__fadeInLeft animate__delay-1s">Revolutionise</p>
-            <p class="animate__animated animate__fadeInLeft animate__delay-1s">your life from the</p>
-            <p class="logo-sub animate__animated animate__fadeInRight animate__delay-1s">Inside out</p>
+            <p class="first-hero-text" data-aos="fade-right" data-aos-delay="1000" data-aos-duration="1500">Revolutionise</p>
+            <p class="second-hero-text" data-aos="fade-left" data-aos-delay="1500" data-aos-offset="200" data-aos-duration="1500">your life from the</p>
+            <p class="logo-sub third-hero-text" data-aos="fade-right" data-aos-delay="3000" data-aos-offset="150" data-aos-duration="1500">Inside out</p>
         </div>
     </section>
     <!-- END: hero section -->
