--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     <img src="static/img/insta/succeed-compress.png" alt="mhairi-life-coach-instagram-suceed">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/mindset-comp.png" alt="mhairi-life-coach-instagram-mindset">
+                    <img src="static/img/insta/mindset-comp2.jpg" alt="mhairi-life-coach-instagram-mindset">
                 </div>
             </div>
             <!-- END: latest instagram posts -->
