--- a/services.html
+++ b/services.html
@@ -424,19 +424,19 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/feel-garden-comp.png" alt="mhairi-life-coach-instagram-feel">
+                    <img src="static/img/insta/feel-garden-comp2.jpg" alt="mhairi-life-coach-instagram-feel">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/sunday-compress.png" alt="mhairi-life-coach-instagram-sunday">
+                    <img src="static/img/insta/sunday-comp2.jpg" alt="mhairi-life-coach-instagram-sunday">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/believe-comp.png" alt="mhairi-life-coach-instagram-believe">
+                    <img src="static/img/insta/believe-comp2.jpg" alt="mhairi-life-coach-instagram-believe">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/succeed-compress.png" alt="mhairi-life-coach-instagram-suceed">
+                    <img src="static/img/insta/succeed-comp2.jpg" alt="mhairi-life-coach-instagram-suceed">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/mindset-comp.png" alt="mhairi-life-coach-instagram-mindset">
+                    <img src="static/img/insta/mindest-comp2.jpg" alt="mhairi-life-coach-instagram-mindset">
                 </div>
             </div>
             <!-- END: latest instagram posts -->
