Add custom subject field to form

--- a/contact.html
+++ b/contact.html
@@ -120,6 +120,7 @@
                             <hr class="form-hr">
                             <input type="text" class="form-field" id="hear-field" placeholder="How did you hear about us?">
                         </div>
+                        <input id="customSubject" type="hidden" name="subject" value="" class="hidden">
                         <div class="form-group message">
                             <hr class="form-hr">
                             <textarea class="form-field" name="message" id="message-field" rows="" placeholder="Message"></textarea>
