Remove attempted custom sub

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                 Fill out the form below or email us at info@revolvecoaching.co.uk
             </h3>
             <div class="contact-form">
-                <form name="Contact" action="" method="POST" data-netlify="true" encType="multipart/form-data">
+                <form id="contactForm" name="Contact" action="" method="POST" data-netlify="true" encType="multipart/form-data">
                     <div class="form-grid">
                         <div class="form-group full-name">
                             <hr class="form-hr">
@@ -120,7 +120,7 @@
                             <hr class="form-hr">
                             <input type="text" class="form-field" id="hear-field" placeholder="How did you hear about us?">
                         </div>
-                        <input id="customSubject" type="hidden" name="subject" value="" class="hidden">
+                        <!-- <input id="customSubject" type="hidden" name="subject" value="" class="hidden"> -->
                         <div class="form-group message">
                             <hr class="form-hr">
                             <textarea class="form-field" name="message" id="message-field" rows="" placeholder="Message"></textarea>
