--- a/index.html
+++ b/index.html
@@ -18,16 +18,25 @@
     <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
+    <div class="quiz-banner">
+        <h2 class="sect-subtitle">
+            Hello
+        </h2>
+        <p class="normal-text">
+            Join the quiz
+        </p>
+    </div>
+    
     <header id="header">
         <div class="header-logo d-none d-md-block">
             <a class="header-link" href="index.html">
-                <h1 class="logo-1 mb-1">Mhairi Todds</h1>
+                <h1 class="logo-1 mb-1">Mhairi Todd</h1>
                 <h2 class="logo-subtitle mb-0">Revolve Coaching</h2>
             </a>
         </div>
-        <div class="toggle-header">
+        <div id="header-nav" class="toggle-header-relative">
             <a class="header-link" href="index.html">
-                <h1 class="header-name d-md-none">Mhairi Todd</h1>
+                <h1 class="header-name-quiz d-md-none">Mhairi Todd</h1>
             </a>
             <div class="nav-toggle">
                 <h5 class="nav-toggle-text">MENU</h5>
@@ -85,9 +94,13 @@
             <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="mhairi-life-coach-walking-towards">
         </div>
         <div class="home-hero-text">
-            <p class="first-hero-text" data-aos="fade-right" data-aos-delay="1000" data-aos-duration="1500">Revolutionise</p>
+            <!-- <p class="first-hero-text" data-aos="fade-right" data-aos-delay="1000" data-aos-duration="1500">Revolutionise</p>
             <p class="second-hero-text" data-aos="fade-left" data-aos-delay="1500" data-aos-offset="200" data-aos-duration="1500">your life from the</p>
-            <p class="logo-sub third-hero-text" data-aos="fade-right" data-aos-delay="3000" data-aos-offset="150" data-aos-duration="1500">Inside out</p>
+            <p class="logo-sub third-hero-text" data-aos="fade-right" data-aos-delay="3000" data-aos-offset="150" data-aos-duration="1500">Inside out</p> -->
+            <p class="first-hero-text">Revolutionise</p>
+            <p class="second-hero-text">your life from the</p>
+            <p class="logo-sub third-hero-text">Inside out</p>
+
         </div>
     </section>
     <!-- END: hero section -->
@@ -390,6 +403,8 @@
     </footer>
 
     <!-- jQuery -->
+
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js" integrity="sha256-ur/YlHMU96MxHEsy3fHGszZHas7NzH4RQlD4tDVvFhw=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
