Add styles to quiz banner

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 <body>
     <div class="quiz-banner">
         <h2 class="sect-subtitle">
-            Hello
+            Take the coaching quiz
         </h2>
         <p class="normal-text">
-            Join the quiz
+            Find out if you are ready for coaching in 60 secs
         </p>
+        <a id="bannerBtn" class="btn-pink quiz-banner-btn" href="#quizSection">Take the quiz!</a>
     </div>
+    <div class="placeholder"></div>
     
     <header id="header">
         <div class="header-logo d-none d-md-block">
@@ -260,7 +262,7 @@
     <!-- END: parralex services section -->
     
     <!-- quiz section -->
-    <section class="quiz-section">
+    <section id="quizSection" class="quiz-section">
         <!-- First quiz CTA section -->
         <div id="quizCta" class="">
             <h2 class="quiz-title sect-title">
