Reduce size of quiz banner

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Take the coaching quiz
         </h2>
         <p class="normal-text">
-            Find out if you are ready for coaching in 60 secs
+            Find out if you're ready for coaching in 60 secs
         </p>
         <a id="bannerBtn" class="btn-pink quiz-banner-btn" href="#quizSection">Take the quiz!</a>
     </div>
