Add in trial fonts

--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="about-detail-quote">
-            <p class="logo-3">So, that’s a nice story, but how does that help you? </p>
+            <p class="sect-title">So, that’s a nice story, but how does that help you? </p>
             <p class="sect-subtitle pink-text">
                 I’ve been where you are:
             </p>
@@ -178,7 +178,7 @@
                 The coaching  
             </h2>
             <h3 class="quiz-font logo-font">
-                quiz
+                Quiz
             </h3>
             <div class="quiz-cta-content">
                 <h4 id="quizResult" class="quiz-content-title sect-title">
