--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 The coaching  
             </h2>
             <h3 class="quiz-font logo-font">
-                quiz
+                Quiz
             </h3>
             <div class="quiz-cta-content">
                 <h4 id="quizResult" class="quiz-content-title sect-title">
