--- a/services.html
+++ b/services.html
@@ -173,7 +173,7 @@
 
     <!-- how it works -->
     <section class="how-it-works">
-        <h2 class="logo-3 how-title">
+        <h2 class="sect-title how-title">
             How my program works:
         </h2>
         <div class="how-content">
@@ -254,7 +254,7 @@
 
     <!-- signature package -->
     <section class="signature-package">
-        <h2 class="logo-3 how-title">
+        <h2 class="sect-title how-title">
             Coaching packages
         </h2>
         <div class="signature-content">
