Change sect title fonts and banner color

--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
 
     <!-- FAQ -->
     <section class="faq-section">
-        <h2 class="faq-title logo-3">
+        <h2 class="faq-title sect-title">
             Frequently asked questions
         </h2>
         <div class="faq-content">
@@ -209,7 +209,7 @@
                 The coaching  
             </h2>
             <h3 class="quiz-font logo-font">
-                quiz
+                Quiz
             </h3>
             <div class="quiz-cta-content">
                 <h4 id="quizResult" class="quiz-content-title sect-title">
