--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
             <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="mhairi-life-coach-walking-towards">
         </div>
         <div class="home-hero-text">
-            <!-- <p class="first-hero-text" data-aos="fade-right" data-aos-delay="1000" data-aos-duration="1500">Revolutionise</p>
+            <p class="first-hero-text" data-aos="fade-right" data-aos-delay="1000" data-aos-duration="1500">Revolutionise</p>
             <p class="second-hero-text" data-aos="fade-left" data-aos-delay="1500" data-aos-offset="200" data-aos-duration="1500">your life from the</p>
-            <p class="logo-sub third-hero-text" data-aos="fade-right" data-aos-delay="3000" data-aos-offset="150" data-aos-duration="1500">Inside out</p> -->
-            <p class="first-hero-text">Revolutionise</p>
+            <p class="logo-sub third-hero-text" data-aos="fade-right" data-aos-delay="3000" data-aos-offset="150" data-aos-duration="1500">Inside out</p>
+            <!-- <p class="first-hero-text">Revolutionise</p>
             <p class="second-hero-text">your life from the</p>
-            <p class="logo-sub third-hero-text">Inside out</p>
+            <p class="logo-sub third-hero-text">Inside out</p> -->
 
         </div>
     </section>
