--- a/services.html
+++ b/services.html
@@ -83,7 +83,7 @@
             <div class="services-hero-content">
                 <h1 class="about-title">Life transformation coaching</h1>
                 <h2 class="sect-title fw-n">Get ready to live full and free</h2>
-                <p class="logo-3 services-logo-title">
+                <p class="sect-title fw-n">
                     Don't worry..
                 </p>
                 <p class="logo-3 services-logo-title">
@@ -210,7 +210,7 @@
                 The coaching  
             </h2>
             <h3 class="quiz-font logo-font">
-                quiz
+                Quiz
             </h3>
             <div class="quiz-cta-content">
                 <h4 id="quizResult" class="quiz-content-title sect-title">
@@ -260,7 +260,7 @@
         <div class="signature-content">
             <div class="coaching-package-item">
                 <div class="signature-includes">
-                    <h2 class="sect-title signature-title">
+                    <h2 class="sect-title fw-n signature-title">
                         Swift
                     </h2>
                     <p class="normal-text coaching-package-intro">
@@ -293,7 +293,7 @@
             <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
                 <div class="signature-includes">
-                    <h2 class="sect-title signature-title">
+                    <h2 class="sect-title fw-n signature-title">
                         signature
                     </h2>
                     <p class="normal-text coaching-package-intro">
@@ -333,7 +333,7 @@
             <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
                 <div class="signature-includes">
-                    <h2 class="sect-title signature-title">
+                    <h2 class="sect-title fw-n signature-title">
                         Shift
                     </h2>
                     <p class="normal-text coaching-package-intro">
