--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mhairi Todd - Revolve Coaching</title>
 
+    <meta name="Description" content="Transformation coach for talented women who want more from life. Teaching women that the power they seek lies within them.">
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
