--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mhairi Todd - Revolve Coaching</title>
+    <title>Mhairi Todd - Revolve Coaching - Contact me</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
