Add testimonial to quote box

--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@
     <section class="quote-parallax-container">
         <div class="quote">
             <h3 class="sect-subtitle">
-                Words I live by
+                Client love
             </h3>
             <p class="quote-text">
-                “THE KEY TO SUCCESS IS TO START BEFORE YOU ARE READY”
+                “Revolutionary, Motivating and empowering. An absolutely life changing delight.”
             </p>
         </div>
     </section>
