--- a/testimonials.html
+++ b/testimonials.html
@@ -182,7 +182,7 @@
             </p>
             <br>
             <p class="sect-subtitle">
-                Hear a few of their wonderful voices.
+                Here are a few of their wonderful voices.
             </p>
         </div>
     </section>
