Remove quiz banner

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
-    <div class="quiz-banner">
+    <!-- <div class="quiz-banner">
         <h2 class="sect-subtitle">
             Take the coaching quiz
         </h2>
@@ -27,7 +27,7 @@
         </p>
         <a id="bannerBtn" class="btn-pink quiz-banner-btn" href="#quizSection">Take the quiz!</a>
     </div>
-    <div class="placeholder"></div>
+    <div class="placeholder"></div> -->
     
     <header id="header">
         <div class="header-logo d-none d-md-block">
@@ -36,7 +36,7 @@
                 <h2 class="logo-subtitle mb-0">Revolve Coaching</h2>
             </a>
         </div>
-        <div id="header-nav" class="toggle-header-relative">
+        <div id="header-nav" class="toggle-header">
             <a class="header-link" href="index.html">
                 <h1 class="header-name-quiz d-md-none">Mhairi Todd</h1>
             </a>
@@ -95,15 +95,10 @@
         <div class="home-hero-img">
             <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="mhairi-life-coach-walking-towards">
         </div>
-        <div class="home-hero-text d-none d-md-block">
-            <p class="first-hero-text" data-aos="fade-right" data-aos-delay="1000" data-aos-duration="1500">Revolutionise</p>
-            <p class="second-hero-text" data-aos="fade-left" data-aos-delay="1500" data-aos-offset="200" data-aos-duration="1500">your life from the</p>
-            <p class="logo-sub third-hero-text" data-aos="fade-right" data-aos-delay="3000" data-aos-offset="150" data-aos-duration="1500">Inside out</p>
-        </div>
-        <div class="home-hero-text d-md-none">
-            <p class="first-hero-text">Revolutionise</p>
-            <p class="second-hero-text">your life from the</p>
-            <p class="logo-sub third-hero-text">Inside out</p>
+        <div class="home-hero-text">
+            <p class="first-hero-text" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1500">Revolutionise</p>
+            <p class="second-hero-text" data-aos="fade-left" data-aos-delay="1000" data-aos-offset="200" data-aos-duration="1500">your life from the</p>
+            <p class="logo-sub third-hero-text" data-aos="fade-right" data-aos-delay="2000" data-aos-offset="200" data-aos-duration="1500">Inside out</p>
         </div>
     </section>
     <!-- END: hero section -->
