--- a/contact.html
+++ b/contact.html
@@ -117,24 +117,24 @@
                     <div class="form-grid">
                         <div class="form-group full-name">
                             <hr class="form-hr">
-                            <input type="text" name="name" class="form-field" id="full-name-field" placeholder="Your first and last name">
+                            <input type="text" name="name" class="form-field" id="full-name-field" placeholder="Your first and last name" required>
                         </div>
                         <div class="form-group email">
                             <hr class="form-hr">
-                            <input type="email" name="_replyto" class="form-field" id="email-field" placeholder="Email address">
+                            <input type="email" name="_replyto" class="form-field" id="email-field" placeholder="Email address" required>
                         </div>
                         <div class="form-group service">
                             <hr class="form-hr">
-                            <input type="text" name="_subject" class="form-field" id="service-field" placeholder="Service you're interested in">
+                            <input type="text" name="_subject" class="form-field" id="service-field" placeholder="Service you're interested in" required>
                         </div>
                         <div class="form-group hear">
                             <hr class="form-hr">
-                            <input type="text" class="form-field" id="hear-field" placeholder="How did you hear about us?">
+                            <input type="text" class="form-field" id="hear-field" placeholder="How did you hear about us?" required>
                         </div>
                         <!-- <input id="customSubject" type="hidden" name="subject" value="" class="hidden"> -->
                         <div class="form-group message">
                             <hr class="form-hr">
-                            <textarea class="form-field" name="message" id="message-field" rows="" placeholder="Message"></textarea>
+                            <textarea class="form-field" name="message" id="message-field" rows="" placeholder="Message" required></textarea>
                             <hr class="form-hr">
                         </div>
                     </div>
