--- a/about.html
+++ b/about.html
@@ -325,7 +325,7 @@
                         Or pretty pictures at the very least! 
                     </p>
                     <div class="about-cta-btn cf-button">
-                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
+                        <a href="https://www.instagram.com/theroadblockcoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
                     </div>
                 </div>
             </div>
