Add prices to packages

--- a/services.html
+++ b/services.html
@@ -199,7 +199,7 @@
                 <h3 class="sect-subtitle how-sub">Step two</h3>
                 <h2 class="sect-title how-item-title">DISC</h2>
                 <p class="normal-text">
-                    DISC is an incredibly powerful tool, to provide a deeper understanding of self.  Following completion of your online questionnaire we review your fears, motivators and drivers leaving you with the knowledge to improve your communication, empower your relationships and develop your confidence.
+                    DISC is a personality profiling tool used by millions to accelerate personal growth. Following completion of your online questionnaire we review your fears, motivators and drivers leaving you with the knowledge to improve your communication, empower your relationships and develop your confidence.
                 </p>
             </div>
             <div class="how-item">
@@ -275,7 +275,7 @@
                         Swift
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        You need a specific change and you need it fast?  Then Swift is for you.  Together we take an intensive 5-6 week journey to get you where you want to be, quickly.
+                        Need to unlock your potential, improve relationships and reduce stress?  Need to do it now?  This one's for you. Find out what motivates you, how to adapt your style to improve those crucial relationships and so much more.
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
@@ -299,6 +299,9 @@
                             </li>
                         </ul>
                     </figure>
+                    <div class="package-price">
+                        <p class="normal-text">Investment: £155 (value £265)</p>
+                    </div>
                 </div>
             </div>
             <hr class="half-width-hr d-md-none">
@@ -339,6 +342,9 @@
                             </li>
                         </ul>
                     </figure>
+                    <div class="package-price">
+                        <p class="normal-text">Investment: £595 (value £1075)</p>
+                    </div>
                 </div>
             </div>
             <hr class="half-width-hr d-md-none">
@@ -386,6 +392,9 @@
                             </li>
                         </ul>
                     </figure>
+                    <div class="package-price">
+                        <p class="normal-text">Investment: £1100 (Value £2185)</p>
+                    </div>
                 </div>
             </div>
         </div>
