Add swift details

--- a/services.html
+++ b/services.html
@@ -282,20 +282,24 @@
                         <ul class="includes-list">
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                30 min Discovery Session
+                                Online assessment
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                4 * 50 min coaching sessions
+                                DISC Personality Profile Session 1 and 1/2 hours
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                <span>Email contact in between (3 * per week)</span>
+                                <span>Personal Growth Exercise</span>
                                 
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Access to free resources
+                                Follow up and Consolidation Coaching Session 30 mins 
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Receive a 15 Page Report Completely Bespoke to You
                             </li>
                         </ul>
                     </figure>
