--- a/services.html
+++ b/services.html
@@ -304,7 +304,7 @@
                         </ul>
                     </figure>
                     <div class="package-price">
-                        <p class="normal-text">Investment: £155 (value £265)</p>
+                        <p class="normal-text">Investment: £155 (Value £265)</p>
                     </div>
                 </div>
             </div>
@@ -347,7 +347,7 @@
                         </ul>
                     </figure>
                     <div class="package-price">
-                        <p class="normal-text">Investment: £595 (value £1075)</p>
+                        <p class="normal-text">Investment: £595 (Value £1075)</p>
                     </div>
                 </div>
             </div>
