Add offer banner

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
 </head>
 <body>
     
+    <div class="quiz-banner">
+        <h2 class="sect-subtitle">
+            10% off any coaching package
+        </h2>
+        <p class="normal-text">
+            Quote GIVEBACK10
+        </p>
+        <a id="bannerBtn" class="btn-pink quiz-banner-btn" href="#quizSection">See packages</a>
+    </div>
+    <div class="placeholder"></div>
+
     <header id="header">
         <div class="header-logo d-none d-md-block">
             <a class="header-link" href="index.html">
@@ -39,7 +50,7 @@
                 <h2 class="logo-subtitle mb-0">Revolve Coaching</h2>
             </a>
         </div>
-        <div id="header-nav" class="toggle-header">
+        <div id="header-nav" class="toggle-header-relative">
             <a class="header-link" href="index.html">
                 <h1 class="header-name-quiz d-md-none">Mhairi Todd</h1>
             </a>
